--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-28  Pema Geyleg <pema.geyleg@gmail.com>
+
+	* dz.po: Updated dzongkha translation.
+
 2007-03-11  David Lodge <dave@cirt.net>
 
 	* en_GB.po: Updated English (British) translation
