--- a/po/ar.po
+++ b/po/ar.po
@@ -1582,7 +1582,7 @@ msgid "starting connection with chronopic"
 msgstr ""
 
 #: ../src/chronojump.cs:395
-msgid "if program crashes, write to xavi@xdeblas.com"
+msgid "if program crashes, write to xaviblas@gmail.com"
 msgstr ""
 
 #: ../src/chronojump.cs:396
