--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 CHRONOJUMP DETAILED CHANGELOG:
 
+7 apr 2007
+	Added portuguese from portugal
+
 31 mar 2007 (minor RELEASE 0.52 for Linux and windows)
 	Added totalTime, avg and Sd in treeviewJump and treeViewPulse
 	updated translations to catalan and spanish (dzongkha deactivated on windows)
