1st test on put images of tests on main window 1st test on DialogImageTest (with image and text)
Added: src/gui/dialog_image_test.cs, images/no-image.png
images/agility_505-h150.png
	
event execute win is now centered
better tables on eventExecute
main notebook can displace (good for maemo)
1Km, 2Km not shown on run execute bar and menu
Makefile compile if glade changed

svn path=/trunk/; revision=242

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,15 @@
 
+TODO: 
+-put a image_file, and a image_desc for every test type. 
+-create some images
+-DialogImageTest will get data from event passed
+-add image and desc on new event type creation (desc is the current Description)
+-put a try{} catch on loading of images (probably user made a mistake)
+-allow to change image and desc of any event type
+-write some filter to update DB.
+
 
 ** OUTDATED file **
-
 
 
 
