changed to gtk-sharp-2.0 and glade-sharp-2.0 -changing the selected method on treeviews (see gui/session load) NPlot updated to 0.9.9.2
Added Agility tests: 423350
Showing little image of every test 423352 (only for agility now)
DialogImageTest works getting the eventType name and image
added 5 agility tests: (20Yard, 505, Illinois, Shuttle-Run & ZigZag) with its images
added rocket jump
added sqlite/event.cs with graph stuff
added "mini" images dir and files
added eventType.cs, reactionTimeType.cs

edit run shows speed in correct units
Fixed bug: 433444: Constants created before Catalog: "All jumps" was no localized

svn path=/trunk/; revision=244

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,16 @@
 
 TODO: 
--put a image_file, and a image_desc for every test type. 
--create some images
--DialogImageTest will get data from event passed
+-event edit (run) shows km/h not looking at prefs	DONE
+-put a image_file, and a image_desc for every test type. DONE 
+-create some images					DONE
+-DialogImageTest will get data from event passed	DONE
+-write some filter to update DB.			DONE
 -add image and desc on new event type creation (desc is the current Description)
--put a try{} catch on loading of images (probably user made a mistake)
 -allow to change image and desc of any event type
--write some filter to update DB.
+-put a try{} catch on loading of images (probably user made a mistake)
+-clean warnings!!
+-fix combo stuff on gtk2, see if it works on windows and maemo
+
 
 
 ** OUTDATED file **
