--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-15  Jorge Gonzalez <jorgegon@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2007-04-29  David Lodge <dave@cirt.net>
 
 	* en_GB.po: Updated British English translation
