--- a/web/data/langs/_ca/Pages/faq
+++ b/web/data/langs/_ca/Pages/faq
@@ -25,7 +25,7 @@ L'acer de la plataforma de contactes serà sotmès a nombroses forces, si l'acer
 
 <p><li>Per què no feu servir cèl·lules fotoelèctriques?
 <p>
-Perquè encara no ha col·laborat ningú oferint-nos informació sobre la seva fabricació, a on comprar-les, quins preus tenen, quin és el retard en la detecció d'events... agrairem les col·laboracions que pogueu oferir-nos en aquesta direcció. 
+Consulti <a href="photocells_es.html">fotocèl·lules</a> (castellà).
 
 <p><li>He descobert una forma millor de construir la plataforma de contactes. On puc anunciar-la?
 <p>
