--- a/web/data/langs/_es/Pages/faq
+++ b/web/data/langs/_es/Pages/faq
@@ -25,7 +25,7 @@ El acero de la plataforma de contactos va a ser sometido a numerosas fuerzas, si
 
 <p><li>¿Por qué no usáis células fotoeléctricas?
 <p>
-Por que todavía nadie ha colaborado en ofrecer información sobre cómo fabricarlas, dónde comprarlas, precios, retardo en la detección de eventos... agradeceremos colaboraciones en este aspecto.
+Lea esta página: <a href="photocells_es.html">Fotocélulas</a>.
 
 <p><li>He descubierto una manera mejor de hacer la plataforma de contactos ¿dónde puedo anunciarla?
 <p>
