--- a/web/data/langs/_gl/Pages/faq
+++ b/web/data/langs/_gl/Pages/faq
@@ -25,7 +25,7 @@ Nós non comercializamos plataformas de contactos, porén instamos a quen desexe
 
 <p><li>Por que non empregades células fotoeléctricas?
 <p>
-Porque aínda ninguén colaborou ofrecéndonos información sobre como fabricalas, onde mercalas, prezos, retardo na detección de eventos... agradecemos colaboracións nesa materia.
+Lea la páxina de <a href="photocells_es.html">células fotoeléctricas</a> (en castelán).
 
 <p><li>Descubrín unha maneira mellor de facer a plataforma de contactos, onde podo anunciala?
 <p>
