--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-14  Pema Geyleg <pema.geyleg@gmail.com>
+
+	* dz.po: Updated dzongkha translation.
+
 2007-05-15  Jorge Gonzalez <jorgegon@svn.gnome.org>
 
 	* es.po: Updated Spanish translation
