--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-15  Adam Weinberger  <adamw@gnome.org>
+
+	* POTFILES.in: Added missing file and sorted.
+
 2007-08-15  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
