--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-18  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2007-08-15  Adam Weinberger  <adamw@gnome.org>
 
 	* POTFILES.in: Added missing file and sorted.
